// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error message if token is falsy 1`] = `
<div>
  <mock-StoreTitle>
    Reset Password
  </mock-StoreTitle>
  <h1
    aria-live="polite"
  >
    <mock-FormattedMessage
      defaultMessage="Reset Password"
      id="resetPassword.header"
    />
  </h1>
  <div>
    <div>
      <mock-FormattedMessage
        defaultMessage="Uh oh, something went wrong. Check the link or try again."
        id="resetPassword.invalidTokenMessage"
      />
    </div>
  </div>
</div>
`;

exports[`should render formErrors 1`] = `
<div>
  <mock-StoreTitle>
    Reset Password
  </mock-StoreTitle>
  <h1
    aria-live="polite"
  >
    <mock-FormattedMessage
      defaultMessage="Reset Password"
      id="resetPassword.header"
    />
  </h1>
  <div>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <mock-FormattedMessage
          defaultMessage="Please enter your email address and new password."
          id="resetPassword.descriptionText"
        />
      </div>
      <div>
        <label>
          Email address
        </label>
        <span
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span>
            <input
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span />
          <span
            aria-hidden="false"
          />
        </span>
        <p />
      </div>
      <div>
        <label
          htmlFor="Password"
        >
          New Password
        </label>
        <span
          style={
            Object {
              "--iconsAfter": 1,
              "--iconsBefore": 0,
            }
          }
        >
          <span>
            <input
              id="newPassword"
              name="newPassword"
              onBlur={[Function]}
              onChange={[Function]}
              type="password"
              value=""
            />
          </span>
          <span />
          <span
            aria-hidden="false"
          >
            <button
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                <svg
                  aria-label="View Password"
                  fill="none"
                  height={24}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p />
      </div>
      <div>
        <button
          disabled={false}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="submit"
        >
          <span>
            <mock-FormattedMessage
              defaultMessage="Save Password"
              id="resetPassword.savePassword"
            />
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render properly 1`] = `
<div>
  <mock-StoreTitle>
    Reset Password
  </mock-StoreTitle>
  <h1
    aria-live="polite"
  >
    <mock-FormattedMessage
      defaultMessage="Reset Password"
      id="resetPassword.header"
    />
  </h1>
  <div>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <mock-FormattedMessage
          defaultMessage="Please enter your email address and new password."
          id="resetPassword.descriptionText"
        />
      </div>
      <div>
        <label>
          Email address
        </label>
        <span
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span>
            <input
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span />
          <span
            aria-hidden="false"
          />
        </span>
        <p />
      </div>
      <div>
        <label
          htmlFor="Password"
        >
          New Password
        </label>
        <span
          style={
            Object {
              "--iconsAfter": 1,
              "--iconsBefore": 0,
            }
          }
        >
          <span>
            <input
              id="newPassword"
              name="newPassword"
              onBlur={[Function]}
              onChange={[Function]}
              type="password"
              value=""
            />
          </span>
          <span />
          <span
            aria-hidden="false"
          >
            <button
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                <svg
                  aria-label="View Password"
                  fill="none"
                  height={24}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p />
      </div>
      <div>
        <button
          disabled={false}
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="submit"
        >
          <span>
            <mock-FormattedMessage
              defaultMessage="Save Password"
              id="resetPassword.savePassword"
            />
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render success message if hasCompleted is true 1`] = `
<div>
  <mock-StoreTitle>
    Reset Password
  </mock-StoreTitle>
  <h1
    aria-live="polite"
  >
    <mock-FormattedMessage
      defaultMessage="Reset Password"
      id="resetPassword.header"
    />
  </h1>
  <div>
    <div>
      <mock-FormattedMessage
        defaultMessage="Your new password has been saved. Please use this password to sign into your Account."
        id="resetPassword.successMessage"
      />
    </div>
  </div>
</div>
`;
